[package]
name = "YuPomo"
version = "0.1.34"
description = "Boost productivity, one cycle at a time."
authors = ["Yuri Cunha"]
license = "LGPL-2.1 license"
repository = "https://github.com/isyuricunha/YuPomo"
default-run = "YuPomo"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-start-dragging", "window-set-focus", "window-maximize", "window-set-size", "window-minimize", "window-unmaximize", "window-set-resizable", "window-close", "window-set-min-size", "notification-all", "fs-read-file", "fs-write-file", "shell-open", "updater"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
